--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     --inter: "Inter", sans-serif;
     --main_color: #1C5550;
     --pink: #DFD9D9;
-    --cart: #C3B97F;
+    --cart_button: #C3B97F;
     --side_text: #91B599;
     --cards_title: 24px;
 }
@@ -38,7 +38,16 @@ ul {
     column-gap: 84px;
 }
 
+li {
+    transition: all .3s;
+}
+
+li:hover {
+    transform: scale(1.15);
+}
+
 li a {
+    font-family: var(--inter);
     font-size: 18px;
     font-weight: 400;
     line-height: 21.78px;
@@ -55,8 +64,12 @@ li a {
     align-items: center;
     padding: 8px 20px;
     column-gap: 100px;
-    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    box-shadow: 1.52px 3px 3px -0.8px rgba(0, 0, 0, 0.2) inset,
+        0px -0.3px 1px 0px rgba(223, 217, 217, 0.4) inset;
+    ;
+
 }
 
 .searchP {
@@ -67,11 +80,57 @@ li a {
     color: var(--side_text);
 }
 
+.icons {
+    padding: 4px;
+    border: none;
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 4px -2px rgba(223, 217, 217, 0.4) inset, 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
+}
+
+
 /* aside  */
 
 aside {
     grid-area: ASIDE;
-    background-color: red;
+    background-color: rgba(0, 0, 0, 0.2);
+    padding-top: 38px;
+    padding-left: 40px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2) inset, 0px -1px 4px 0px rgba(223, 217, 217, 0.4) inset;
+
+}
+
+h3 {
+    font-family: var(--inter);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #C3B97F;
+}
+
+.aside_text {
+    padding-top: 16px;
+    padding-left: 8px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
+}
+
+.aside_text a {
+    font-family: var(--inter);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 25px;
+    color: var(--side_text);
+}
+
+.underline {
+    font-family: var(--inter);
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 25px;
+    text-decoration: underline;
+    text-underline-offset: 5px;
 }
 
 /* cover  */
@@ -85,12 +144,33 @@ aside {
     align-content: end;
 }
 
-.cover_price {
+.price_div {
     display: flex;
     padding-left: 20px;
     align-items: center;
     justify-content: space-between;
     background-color: var(--pink);
+}
+
+.price {
+    font-family: var(--inter);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    color: var(--main_color);
+
+}
+
+.cover_button {
+    padding: 9px 50px;
+    border: none;
+    background-color: var(--cart_button);
+    font-family: var(--inter);
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 22px;
+    color: var(--pink);
+
 }
 
 /* side pictures */
@@ -174,4 +254,15 @@ h2 {
     align-items: center;
     justify-content: space-between;
     background-color: var(--pink);
+}
+
+.cart_button {
+    padding: 9px 8px 9px 10px;
+    border: none;
+    background-color: var(--cart_button);
+    font-family: var(--inter);
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 22px;
+    color: var(--pink);
 }
