--- a/css/style.css
+++ b/css/style.css
@@ -86,8 +86,12 @@ li a {
     border-radius: 4px;
     background-color: rgba(0, 0, 0, 0.2);
     box-shadow: 0px 2px 4px -2px rgba(223, 217, 217, 0.4) inset, 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
+    transition: all .2s;
 }
 
+.icons:hover {
+    transform: scale(1.2);
+}
 
 /* aside  */
 
@@ -128,7 +132,6 @@ h3 {
     font-family: var(--inter);
     font-size: 14px;
     font-weight: 700;
-    line-height: 25px;
     text-decoration: underline;
     text-underline-offset: 5px;
 }
@@ -158,7 +161,6 @@ h3 {
     font-weight: 700;
     line-height: 24px;
     color: var(--main_color);
-
 }
 
 .cover_button {
@@ -170,7 +172,13 @@ h3 {
     font-weight: 700;
     line-height: 22px;
     color: var(--pink);
+}
 
+.cover_button:hover,
+.cart_button:hover {
+    background-color: #b9a537;
+    border-radius: 5px;
+    transform: scale(1.01);
 }
 
 /* side pictures */
@@ -231,6 +239,7 @@ h3 {
     padding-top: 8px;
     padding-left: 8px;
 }
+
 
 h2 {
     font-family: var(--inter);
